[package]
name = "ktra_ui"
version = "0.1.0"
authors = ["Gabriel Smith <ga29smith@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
clap = "2.33.3"
curl = "0.4.34"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"

[build-dependencies]
vergen = "3.1.0"
